--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <div class="game-container">
             <iframe
-                src="https://editor.p5js.org/alexandre.siqueira.silva/sketches/ZNzAOt6L5" 
+                src="https://editor.p5js.org/alexandre.siqueira.silva/full/ZNzAOt6L5" 
                 frameborder="0"
                 allowfullscreen
                 class="game-frame">
